Add new license posts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,6 +87,7 @@
               <li><%= link_to 'Certification', certification_path %></li>
               <li><%= link_to 'Insurance', insurance_path %></li>
               <li><%= link_to 'Material Safety Data Sheets', safety_path %></li>
+              <li><%= link_to 'Licenses', license_path %></li>
             </ul>
           </div>
           <div class="col sm-col-12 col-4">
