--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -6,9 +6,20 @@
       <%= f.date_field :date, :value => Date.today, :autofocus => true, :required => true %>
     </p>
     <p>
+      <%= f.label 'Report title' %><br>
+      <%= f.text_field :title, :value => 
+        @building ? @building.name : @report.building.name, 
+        :autofocus => true, :required => true %>
+    </p>
+    <p>
       <%= f.label 'PDF file upload (1 file limit)' %><br>
       <%= f.cl_image_upload :pdf, :html => {:accept => '.pdf', :required => true} %>
     </p>
+    <p>
+      <%= f.label :category %><br>
+      <%= f.select :category, Report::CATEGORY, prompt: "Pick one", :selected => 'report' %>
+    </p>
+    
     <p>
       <%= f.submit %>
     </p>
