Add protective value

--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -20,7 +20,8 @@
 
 
 <h2>Reports</h2>
-<% @building.reports.order('date DESC').select{|report| report.category == nil || report.category == 'report'}.each do |report|  %>
+<% @building.reports.order('date DESC')
+  .select{|report| report.category ? report.category == nil || report.category == 'report' : report}.each do |report|  %>
   <p>
     <strong><%= report.date.strftime('%a, %d %b %Y') %>:</strong>
     <%= link_to 'Open', cl_image_path(report.pdf), :target => '_blank' %> |
